[gd_scene load_steps=34 format=3 uid="uid://lmnhxpy1d57x"]

[ext_resource type="Script" path="res://Assets/Scripts/playerScripts/Player.gd" id="1_gga17"]
[ext_resource type="Texture2D" uid="uid://c6egmvjk6klhb" path="res://Assets/Sprites/Sprites animation/Sprite animation player/Sprites.png" id="2_va02a"]
[ext_resource type="Script" path="res://Assets/Scripts/playerScripts/Colisiones.gd" id="3_ymfip"]
[ext_resource type="Script" path="res://Assets/Scripts/playerScripts/RayCast2D.gd" id="4_4mjsj"]
[ext_resource type="Script" path="res://Assets/Scripts/playerScripts/CollisionHandler.gd" id="4_5e0se"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n4wft"]
radius = 5.0
height = 10.0

[sub_resource type="Animation" id="Animation_77bp8"]
resource_name = "Down_left_roll"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2i(36, 0), Vector2i(37, 0), Vector2i(38, 0), Vector2i(39, 0)]
}

[sub_resource type="Animation" id="Animation_ihtkx"]
resource_name = "Down_left_run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [56, 57, 58, 59]
}

[sub_resource type="Animation" id="Animation_uguws"]
resource_name = "Down_right_roll"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2i(32, 0), Vector2i(33, 0), Vector2i(34, 0), Vector2i(35, 0)]
}

[sub_resource type="Animation" id="Animation_n8mfi"]
resource_name = "Down_right_run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_mxfc1"]
resource_name = "Down_roll"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [40, 41, 42, 43]
}

[sub_resource type="Animation" id="Animation_craiq"]
resource_name = "Down_run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [60, 61, 62, 63]
}

[sub_resource type="Animation" id="Animation_06apb"]
resource_name = "Down_slash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_qaipb"]
resource_name = "left_roll"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_e4rkb"]
resource_name = "Left_run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [76, 77, 78, 79]
}

[sub_resource type="Animation" id="Animation_00yd7"]
resource_name = "Left_slash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_u1inc"]
resource_name = "Normal"
length = 0.11
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [60]
}

[sub_resource type="Animation" id="Animation_8onnw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2i(60, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [60]
}

[sub_resource type="Animation" id="Animation_4pwnf"]
resource_name = "Right_roll"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_v783x"]
resource_name = "Right_run"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_6wx8n"]
resource_name = "Right_slash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_fuxyo"]
resource_name = "Up_left_run"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [52, 53, 54, 55]
}

[sub_resource type="Animation" id="Animation_bc3c4"]
resource_name = "Up_left_run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [68, 69, 70, 71]
}

[sub_resource type="Animation" id="Animation_dmpdv"]
resource_name = "Up_right_roll"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [80, 81, 82, 83]
}

[sub_resource type="Animation" id="Animation_xbbl6"]
resource_name = "Up_right_run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [64, 65, 66, 67]
}

[sub_resource type="Animation" id="Animation_rt1i6"]
resource_name = "Up_roll"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_3rvvj"]
resource_name = "Up_run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [72, 73, 74, 75]
}

[sub_resource type="Animation" id="Animation_yjw0w"]
resource_name = "Up_slah"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_rlpo8"]
resource_name = "death_fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(0.8, 0.8), Vector2(0.7, 0.7), Vector2(0.6, 0.6), Vector2(0.5, 0.5), Vector2(0.4, 0.4), Vector2(0.3, 0.3), Vector2(0.2, 0.2), Vector2(0.1, 0.1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hd1a1"]
_data = {
"Down_left_roll": SubResource("Animation_77bp8"),
"Down_left_run": SubResource("Animation_ihtkx"),
"Down_right_roll": SubResource("Animation_uguws"),
"Down_right_run": SubResource("Animation_n8mfi"),
"Down_roll": SubResource("Animation_mxfc1"),
"Down_run": SubResource("Animation_craiq"),
"Down_slash": SubResource("Animation_06apb"),
"Left_roll": SubResource("Animation_qaipb"),
"Left_run": SubResource("Animation_e4rkb"),
"Left_slash": SubResource("Animation_00yd7"),
"Normal": SubResource("Animation_u1inc"),
"RESET": SubResource("Animation_8onnw"),
"Right_roll": SubResource("Animation_4pwnf"),
"Right_run": SubResource("Animation_v783x"),
"Right_slash": SubResource("Animation_6wx8n"),
"Up_left_roll": SubResource("Animation_fuxyo"),
"Up_left_run": SubResource("Animation_bc3c4"),
"Up_right_roll": SubResource("Animation_dmpdv"),
"Up_right_run": SubResource("Animation_xbbl6"),
"Up_roll": SubResource("Animation_rt1i6"),
"Up_run": SubResource("Animation_3rvvj"),
"Up_slash": SubResource("Animation_yjw0w"),
"death_fall": SubResource("Animation_rlpo8")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qjf1r"]
light_mode = 2

[sub_resource type="Gradient" id="Gradient_cr4ro"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0.329897, 0.752577)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_f50m1"]
gradient = SubResource("Gradient_cr4ro")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 255
script = ExtResource("1_gga17")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
texture = ExtResource("2_va02a")
hframes = 84
frame = 60

[node name="Colisiones" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("CapsuleShape2D_n4wft")
script = ExtResource("3_ymfip")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hd1a1")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_qjf1r")
position = Vector2(1.90735e-06, 0)
scale = Vector2(6.375, 4.36607)
color = Color(0.589392, 0.781202, 0, 1)
texture = SubResource("GradientTexture2D_f50m1")
texture_scale = 0.28
metadata/_edit_lock_ = true

[node name="CollisionHandler" type="Node2D" parent="."]
script = ExtResource("4_5e0se")

[node name="BoxDetectedX" type="RayCast2D" parent="CollisionHandler"]
z_index = 1
target_position = Vector2(5, -5)
collision_mask = 4
script = ExtResource("4_4mjsj")

[node name="BoxDetectedX2" type="RayCast2D" parent="CollisionHandler"]
z_index = 1
target_position = Vector2(-5, 5)
collision_mask = 4
script = ExtResource("4_4mjsj")

[node name="BoxDetectedY" type="RayCast2D" parent="CollisionHandler"]
z_index = 1
target_position = Vector2(5, 5)
collision_mask = 4
script = ExtResource("4_4mjsj")

[node name="BoxDetectedY2" type="RayCast2D" parent="CollisionHandler"]
z_index = 1
target_position = Vector2(-5, -5)
collision_mask = 4
script = ExtResource("4_4mjsj")
